fix (UI) : update blog card and fix alignment

--- a/main.css
+++ b/main.css
@@ -131,7 +131,13 @@
     border: none;
   }
 
-
+  .divider-start {
+    width: 56px;
+    height: 2px;
+    background-color: #000; /* Black color for the line */
+    margin: 10px 0;
+    border: none;
+  }
 
 .service-text{
     width: 952px;
@@ -231,13 +237,7 @@
 }
 
 
-.divider-start {
-    width: 56px;
-    height: 2px;
-    background-color: #000; /* Black color for the line */
-    margin: 10px 0;
-    border: none;
-  }
+
 
 
   .app-box{
@@ -362,12 +362,15 @@
     border-radius: 20px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     background-color: var(--card-bg);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.blog img{
+/* .blog img{
     width: 327px;
     height: 240px;
-}
+} */
 
 .blog-text{
     margin-top: 45px;
